Hotfix: Fixes z-index on appnav for browsers without sticky-support

--- a/src/styles/components/appNav/_horizontalNav.sass
+++ b/src/styles/components/appNav/_horizontalNav.sass
@@ -1,6 +1,5 @@
 ﻿.horizontal_nav
     ul
-        position: sticky
         top: 8rem
         margin: 0
         list-style: none
@@ -11,7 +10,11 @@
         flex-direction: row
         justify-content: center
         height: 2rem
-        z-index: map-get($zindex, toolbar)
+        z-index: map-get($zindex, base)
+
+        @supports (position: sticky)
+            position: sticky
+            z-index: map-get($zindex, toolbar)
 
         li a
             @extend %clickable
